--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "log4js": "^6.9.1",
+    "nanoid": "^3.3.6",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
